# soroban-rpc

./: Cargo.toml  Makefile  README.md  RELEASING.md  go.mod
.github/actions/setup-integration-tests/: action.yml
.github/workflows/: e2e.yml  rust.yml  soroban-rpc.yml
cmd/crates/hcnet-rpc-client/: Cargo.toml
cmd/crates/hcnet-rpc-client/src/: lib.rs  txn.rs
cmd/soroban-rpc/: README.md  main.go
cmd/soroban-rpc/docker/: Dockerfile  Dockerfile.release
cmd/soroban-rpc/internal/: jsonrpc.go
cmd/soroban-rpc/internal/config/: config.go  config_option.go  options.go
cmd/soroban-rpc/internal/daemon/: daemon.go  metrics.go
cmd/soroban-rpc/internal/events/: cursor.go  events.go  events_test.go
cmd/soroban-rpc/internal/ingest/: ledgerentry.go  mock_db_test.go  service.go  service_test.go
cmd/soroban-rpc/internal/methods/: get_events.go  get_events_test.go  get_latest_ledger.go  get_latest_ledger_test.go  get_ledger_entries.go  get_ledger_entry.go  get_network.go  get_transaction.go  get_transaction_test.go  health.go  send_transaction.go  simulate_transaction.go  simulate_transaction_test.go
cmd/soroban-rpc/internal/network/: requestdurationlimiter.go
cmd/soroban-rpc/internal/preflight/: pool.go  preflight.go  preflight_test.go
cmd/soroban-rpc/internal/test/: docker-compose.yml  get_ledger_entries_test.go  get_ledger_entry_test.go  get_network_test.go  health_test.go  integration.go  metrics_test.go  simulate_transaction_test.go  transaction_test.go
cmd/soroban-rpc/internal/transactions/: transactions.go  transactions_test.go
scripts/: check-dependencies.bash
