[workspace]
resolver = "2"
members = [
    "cmd/crates/hcnet-rpc-client",
    "cmd/soroban-rpc/lib/preflight",
]
default-members = ["cmd/crates/hcnet-rpc-client"]
#exclude = ["cmd/crates/soroban-test/tests/fixtures/hello"]

[workspace.package]
version = "20.3.5"
rust-version = "1.74.0"

[workspace.dependencies.soroban-env-host]
 version = "=20.1.1"
 git = "https://github.com/HashCash-Consultants/rs-soroban-env"
 rev = "4c051aba140465905e6e559b94bea6165dd514b7"
 path = "../rs-soroban-env/soroban-env-host"

[workspace.dependencies.soroban-simulation]
 version = "=20.1.1"
 git = "https://github.com/HashCash-Consultants/rs-soroban-env"
 rev = "4c051aba140465905e6e559b94bea6165dd514b7"
 path = "../rs-soroban-env/soroban-env-host"

[workspace.dependencies.soroban-spec]
 version = "=20.2.0"
 git = "https://github.com/HashCash-Consultants/rs-soroban-sdk"
 rev = "97a2d5cd9b682c74ac230236be97c62355b92e8a"
 path = "../rs-soroban-sdk/soroban-spec"

[workspace.dependencies.soroban-spec-rust]
 version = "=20.2.0"
 git = "https://github.com/HashCash-Consultants/rs-soroban-sdk"
 rev = "97a2d5cd9b682c74ac230236be97c62355b92e8a"
 path = "../rs-soroban-sdk/soroban-spec"

[workspace.dependencies.soroban-spec-json]
version = "20.3.0"
git = "https://github.com/stellar/soroban-cli"
rev = "a59f5f421a27bab71472041fc619dd8b0d1cf902"

[workspace.dependencies.soroban-spec-typescript]
version = "20.3.0"
git = "https://github.com/stellar/soroban-cli"
rev = "a59f5f421a27bab71472041fc619dd8b0d1cf902"

[workspace.dependencies.soroban-sdk]
 version = "=20.2.0"
 git = "https://github.com/HashCash-Consultants/rs-soroban-sdk"
 rev = "97a2d5cd9b682c74ac230236be97c62355b92e8a"

[workspace.dependencies.soroban-token-sdk]
 version = "=20.2.0"
 git = "https://github.com/HashCash-Consultants/rs-soroban-sdk"
 rev = "97a2d5cd9b682c74ac230236be97c62355b92e8a"
 
[workspace.dependencies.soroban-ledger-snapshot]
 version = "=20.2.0"
 git = "https://github.com/HashCash-Consultants/rs-soroban-sdk"
 rev = "97a2d5cd9b682c74ac230236be97c62355b92e8a"

[workspace.dependencies.hcnet-rpc-client]
version = "20.3.5"
path = "cmd/crates/hcnet-rpc-client"

[workspace.dependencies.hcnet-xdr]
version = "=20.0.4"
default-features = true

[workspace.dependencies]
hcnet-strkey = "0.0.8"
sep5 = "0.0.2"
base64 = "0.21.2"
thiserror = "1.0.46"
sha2 = "0.10.7"
ethnum = "1.3.2"
hex = "0.4.3"
itertools = "0.10.0"

serde-aux = "4.1.2"
serde_json = "1.0.82"
serde = "1.0.82"

clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
clap_complete = "4.1.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
which = "4.4.0"
wasmparser = "0.90.0"
termcolor = "1.1.3"
termcolor_output = "1.0.1"
ed25519-dalek = "2.0.0"

# networking 
http = "1.0.0"
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
tokio = "1.28.1"

 #[patch."https://github.com/HashCash-Consultants/rs-soroban-env"]
 #soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
# [patch."https://github.com/HashCash-Consultants/rs-soroban-sdk"]
 #soroban-spec = { path = "../rs-soroban-sdk/soroban-spec/" }
# soroban-token-spec = { path = "../rs-soroban-sdk/soroban-token-spec/" }
 #soroban-sdk = { path = "../rs-soroban-sdk/soroban-sdk/" }
 #[patch."https://github.com/HashCash-Consultants/rs-hcnet-xdr"]
# hcnet-xdr = { path = "../rs-hcnet-xdr/" }

[profile.test-wasms]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
